syntax = "proto3";

package authservice.config.mock;

import "validate/validate.proto";

// Mock filter config. The only thing which can be defined is whether it
// allows or rejects any request it matches.
message MockConfig {
    // Boolean specifying whether the filter should return OK for any
    // request it matches. Defaults to false (not OK).
    bool allow = 1;
}
